--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,11 @@ h1,h2,h3,h4,h5,h6,p{
 } 
 
  
+.shadow-custom{
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
 
 /********** Template CSS ************/
 
@@ -188,7 +193,11 @@ h1,h2,h3,h4,h5,h6,p{
  
 }
 /* =================== Portfolio section ==================*/
-
+.polaroid {
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
 
 .portfolio-item .portfolio-btn {
   position: absolute;
